--- a/project/index.html
+++ b/project/index.html
@@ -9,45 +9,24 @@
 </head>
 <body>
 <div id="app">
+    <error ref="error"></error>
     <header>
         <div class="logo">Интернет-магазин</div>
         <div class="cart">
-            <form action="#" class="search-form">
-                <input type="text" class="search-field" v-model="searchLine">
-                <button class="btn-search" type="submit" @click="filter(searchLine)">
-                    <i class="fas fa-search"></i>
-                </button>
-            </form>
-            <button class="btn-cart" type="button" @click="showCart()">Корзина</button>
-            <div class="cart_block" style="display: none">
-                <div class="cart_product_block" v-for="product of cartProducts" :key="product.id_product" :id="'cart-' + product.id_product">
-                    <img :src="imgCatalog" alt="Some img" class="cart_product_img">
-                    <div class="cart_product">
-                        <h3>{{product.product_name}}</h3>
-                        <p>{{product.quantity}}</p>
-                        <p>x{{product.price * product.quantity}}₽</p>
-                        <button class="cart_button" @click="deleteProduct(product)">Убрать</button>
-                    </div>
-                </div>
-                <span id="no_products" v-if="!cartProducts.length">Ваша корзина пуста</span>
-            </div>
+            <search ref="search"></search>
+            <cart ref="cart"></cart>
         </div>
     </header>
     <main>
-        <div class="products">
-            <div class="product-item" v-for="product of products" :key="product.id_product" :id="'product-' + product.id_product">
-                <img :src="imgCatalog" alt="Some img">
-                <div class="desc">
-                    <h3>{{product.product_name}}</h3>
-                    <p>{{product.price}}₽</p>
-                    <button class="buy-btn" @click="addProduct(product)">Купить</button>
-                </div>
-            </div>
-        </div>
+        <catalog ref="catalog"></catalog>
     </main>
 </div>
 <script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js" integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+<script src="js/error-comp.js"></script>
+<script src="js/cart-comp.js"></script>
+<script src="js/catalog-comp.js"></script>
+<script src="js/search-comp.js"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
